[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-uploader"
version = "0.1.0"
description = "社交媒体视频自动上传 CLI 工具（TikTok / Instagram / YouTube）"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "DrissionPage>=4.0",
    "requests>=2.28",
    "openai>=1.0",
    "jinja2>=3.1",
]

[project.scripts]
social-upload = "social_uploader.command_entry:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
social_uploader = ["button_config.json", "state_patterns.json", "profiles/*.json", "analytics/templates/*.md", "analytics/templates/*.html"]
